force-app/main/default/objects/Integration__c/Integration__c.object-meta.xml
<CustomObject>
    <label>Integration</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>