force-app/main/default/objects/Integration__c/fields/Athena_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Athena_End_Time__c</fullName>
    <label>Athena End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>