force-app/main/default/objects/Integration__c/fields/Athena_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Athena_Start_Time__c</fullName>
    <label>Athena Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>