force-app/main/default/objects/Integration__c/fields/Data_for_Athena__c.field-meta.xml
<CustomField>
    <fullName>Data_for_Athena__c</fullName>
    <label>Data for Athena</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>