force-app/main/default/objects/Integration__c/fields/Ready_for_Athena__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Athena__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Athena</label>
    <type>Checkbox</type>
</CustomField>