force-app/main/default/objects/Integration__c/listViews/Delete_Record_Calendar.listView-meta.xml
<ListView>
    <fullName>Delete_Record_Calendar</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Data_for_Athena__c</columns>
    <columns>Payload__c</columns>
    <columns>Ready_for_Athena__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class_Name__c</field>
        <operation>equals</operation>
        <value>CC_API_CalendarIntegration</value>
    </filters>
    <filters>
        <field>Method_Action__c</field>
        <operation>equals</operation>
        <value>DELETE</value>
    </filters>
    <label>Delete Record Calendar</label>
</ListView>